vlib/v/checker/tests/match_cond_with_parenthesis_err.out
vlib/v/checker/tests/match_cond_with_parenthesis_err.vv:14:15: warning: unnecessary `()` in `match` condition, use `match expr {` instead of `match (expr) {`.
   12 | 
   13 | fn bar() bool {
   14 |     return match (foo()) {
      |                  ~~~~~~~
   15 |         .a { true }
   16 |         .b, .c { false }
vlib/v/checker/tests/match_cond_with_parenthesis_err.vv:15:3: error: `match` expression with Option type only checks against `none`, to match its value you must unwrap it first `var?`
   13 | fn bar() bool {
   14 |     return match (foo()) {
   15 |         .a { true }
      |         ~~
   16 |         .b, .c { false }
   17 |     }
vlib/v/checker/tests/match_cond_with_parenthesis_err.vv:16:3: error: `match` expression with Option type only checks against `none`, to match its value you must unwrap it first `var?`
   14 |     return match (foo()) {
   15 |         .a { true }
   16 |         .b, .c { false }
      |         ~~~~~~
   17 |     }
   18 | }
