vlib/v/checker/tests/match_cond_with_parenthesis_err.vv
module main

enum Enum {
	a
	b
	c
}

fn foo() ?Enum {
	return .a
}

fn bar() bool {
	return match (foo()) {
		.a { true }
		.b, .c { false }
	}
}

fn main() {
	bar()
}
